--- a/.github/workflows/compile-docker.yml
+++ b/.github/workflows/compile-docker.yml
@@ -33,7 +33,7 @@ jobs:
         uses: docker/metadata-action@v3
         with:
           images: |
-            nebraltd/lora_gateway
+            radicale/lora_gateway
             ghcr.io/${{ github.repository }}
           flavor: |
             latest=true
